EventsAlumni/force-app/main/default/objects/Event_Booking__c/Event_Booking__c.object-meta.xml
<CustomObject>
    <label>Event Booking</label>
    <nameField>
        <displayFormat>EB-{00000}</displayFormat>
        <label>Event Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>