EventsAlumni/force-app/main/default/objects/Event_Booking__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Event Bookings</relationshipLabel>
    <relationshipName>Event_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>