EventsAlumni/force-app/main/default/objects/Event_Booking__c/fields/Billing_Details__c.field-meta.xml
<CustomField>
    <fullName>Billing_Details__c</fullName>
    <label>Billing Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>