EventsAlumni/force-app/main/default/objects/Event_Booking__c/fields/Booked_for_No_of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Booked_for_No_of_Attendees__c</fullName>
    <label>Booked for No of Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>