EventsAlumni/force-app/main/default/objects/Event_Booking__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Bookings</relationshipLabel>
    <relationshipName>Event_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>