EventsAlumni/force-app/main/default/objects/Event_Booking__c/fields/Event_Booking_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Booking_Id__c</fullName>
    <label>Event Booking Id</label>
    <type>AutoNumber</type>
</CustomField>