EventsAlumni/force-app/main/default/objects/Event_Booking__c/fields/Schedule_Sessions_Id__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Sessions_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedule/Sessions Id</label>
    <referenceTo>Schedule_Sessions__c</referenceTo>
    <relationshipLabel>Event Bookings (Schedule/Sessions Id)</relationshipLabel>
    <relationshipName>Event_Bookings1</relationshipName>
    <type>Lookup</type>
</CustomField>