EventsAlumni/force-app/main/default/objects/Event_Booking__c/fields/Schedules_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Schedules_Sessions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedules &amp; Sessions</label>
    <referenceTo>Schedule_Sessions__c</referenceTo>
    <relationshipLabel>Event Bookings</relationshipLabel>
    <relationshipName>Event_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>