EventsAlumni/force-app/main/default/objects/Event_Booking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Booked_for_No_of_Attendees__c</columns>
    <columns>Event_Booking_Id__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Schedule_Sessions_Id__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>